--- a/src/main/resources/frontend/genres/index.html
+++ b/src/main/resources/frontend/genres/index.html
@@ -29,146 +29,39 @@
         </h1>
         <div class="Section">
           <div class="Tags Tags_genres">
-            <div class="Tags Tags_embed">
+            <div class="Tags Tags_embed" th:each="genre : ${genreList}">
               <div class="Tags-title">
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Лёгкое чтение<span class="undefined-amount">(15638)</span></a>
+                <div class="Tag">
+                  <a href="/genres/slug.html" th:href="@{'/genres/slug/'+ ${genre.getSlug()}}"
+                     th:text="${genre.getSlug()} + ' (' + ${genre.count} + ')'">
+                    1 level
+                    <span class="undefined-amount">
+                                        (15638)
+                                    </span>
+                  </a>
                 </div>
               </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Фантастика<span class="undefined-amount">(44333)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Боевики<span class="undefined-amount">(158)</span></a>
-              </div>
-              <div class="Tags">
+              <div class="Tags" th:each="genre1 : ${genre.getSubGenres()}">
                 <div class="Tags-title">
-                  <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Детективы<span class="undefined-amount">(10)</span></a>
+                  <div class="Tag">
+                    <a href="/genres/slug.html" th:href="@{'/genres/slug/'+ ${genre1.getSlug()}}"
+                       th:text="${genre1.getSlug()} + ' (' + ${genre1.count} + ')'">
+                      2 level
+                      <span class="undefined-amount">
+                                            (10)
+                                        </span>
+                    </a>
                   </div>
                 </div>
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Триллер<span class="undefined-amount">(134)</span></a>
+                <div class="Tag" th:each="genre2 : ${genre1.getSubGenres()}">
+                  <a href="/genres/slug.html" th:href="@{'/genres/slug/'+ ${genre2.getSlug()}}"
+                     th:text="${genre2.getSlug()} + ' (' + ${genre2.count} + ')'">
+                    3 level
+                    <span class="undefined-amount">
+                                        (134)
+                                    </span>
+                  </a>
                 </div>
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Крутой детектив<span class="undefined-amount">(934)</span></a>
-                </div>
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Иронический детектив<span class="undefined-amount">(143443)</span></a>
-                </div>
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Про маньяков<span class="undefined-amount">(3331)</span></a>
-                </div>
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Шпионский детектив<span class="undefined-amount">(94)</span></a>
-                </div>
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Криминальный детектив<span class="undefined-amount">(4839)</span></a>
-                </div>
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Классический детектив<span class="undefined-amount">(4488)</span></a>
-                </div>
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Политический детектив<span class="undefined-amount">(1)</span></a>
-                </div>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Фэнтези<span class="undefined-amount">(14338)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Романы<span class="undefined-amount">(1438)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Ужасы<span class="undefined-amount">(156)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Приключения<span class="undefined-amount">(1538)</span></a>
-              </div>
-            </div>
-            <div class="Tags">
-              <div class="Tags-title">
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Серьёзное чтение<span class="undefined-amount">(18)</span></a>
-                </div>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Биографии<span class="undefined-amount">(18)</span></a>
-              </div>
-            </div>
-            <div class="Tags">
-              <div class="Tags-title">
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Деловая литература<span class="undefined-amount">(158)</span></a>
-                </div>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Деловая литература<span class="undefined-amount">(138)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Управление экономикой<span class="undefined-amount">(158)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Карьера<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Маркетинг, PR, реклама<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Финансы<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Бизнес-справочники<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Личные финансы<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Менеджмент<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Зарубежная деловая литература<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Личная эффективность<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Тайм-менеджмент<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Малый бизнес<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Продажи<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Стартапы и создание бизнеса<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Корпоративная культура<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Банковское дело<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Логистика<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Недвижимость<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Интернет-бизнес<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Ораторское искусство / риторика<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Привлечение клиентов и лояльность<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Делопроизводство<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Переговоры<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Государственное и муниципальное управление, политическое управление<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">О бизнесе популярно<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Ценные бумаги / инвестиции<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Бухучет / налогообложение / аудит<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Российская практика<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Истории успеха<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Интернет-маркетинг<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Лидерство<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Проектный менеджмент<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Управление качеством<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Финансовый менеджмент<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Управление персоналом<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Бизнес-процессы<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Управление бизнесом<span class="undefined-amount">(15638)</span></a>
-              </div>
-            </div>
-            <div class="Tags">
-              <div class="Tags-title">
-                <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Драматургия<span class="undefined-amount">(15638)</span></a>
-                </div>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Античная драма<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Комедия<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Сценарий<span class="undefined-amount">(15638)</span></a>
-              </div>
-              <div class="Tag"><a href="/genres/slug.html" th:href="@{/genres/slug}">Драма, пьеса<span class="undefined-amount">(15638)</span></a>
               </div>
             </div>
           </div>
