--- a/src/main/resources/frontend/books/slug.html
+++ b/src/main/resources/frontend/books/slug.html
@@ -10,7 +10,28 @@
 <html class="ie9" lang="ru">
 <![endif]-->
 <!--[if gt IE 9]><!-->  <html lang="ru" xmlns:th="http://www.thymeleaf.org">  <!--<![endif]-->
-<head th:replace="~{fragments/head_fragment :: headFragment('Книга')}"></head>
+<head>
+  <title>Тут название страницы написать</title>
+  <meta name="description" content="Описание страницы">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <!--meta( http-equiv="cache-control" content="no-cache")-->
+  <!--meta( http-equiv="expires" content="0")-->
+  <!--link(rel="preload" href="assets/css/extra.min.css?v=" + version as="style" crossorigin="anonymous")-->
+  <!--<link href="favicon.ico" rel="shortcut icon">-->
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" as="font" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=87821122">
+  <link rel="stylesheet" href="/assets/css/basic.min.css?v=87821122">
+  <link rel="stylesheet" href="/assets/css/extra.min.css?v=87821122">
+  <link rel="stylesheet" href="/assets/css/DownloadBookWindowStyle.css">
+
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+  <script defer src="/assets/js/scripts.min.js"></script>
+</head>
 <body class="Site">
   <!--if lt IE 8
   p.error-browser
@@ -357,6 +378,16 @@
                   </button>
                 </div>
               </div>
+
+              <div id="myPopup">
+                <p>Ссылки для скачивания</p>
+                <div th:each="bookFile : ${slugBook.getBookFileEntityList()}">
+                  <a href="#" th:href="${'/books/download/' + bookFile.hash}"
+                     th:text="${bookFile.getBookFileExtensionString()}"></a>
+                </div>
+                <span id="myPopup__close" class="close">❎</span>
+              </div>
+              <div id="myOverlay"></div>
               <!--+div.-cart-->
               <!--    //+div.-cartElement.-cartElement_amount-->
               <!--    //    +Amount._product-->
@@ -512,4 +543,5 @@
   <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
   <script src="/assets/js/UploadNewBookImageScript.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="/assets/js/DownloadBookScript.js"></script>
 </body></html>
