--- a/src/main/resources/frontend/books/slug.html
+++ b/src/main/resources/frontend/books/slug.html
@@ -496,92 +496,21 @@ p.error-browser
                 <div class="Product-comments">
                     <div class="Product-comments-header">
                         <h3 class="Product-comments-title">Отзывы
-                        </h3><span class="Product-comments-amount">567 отзывов</span>
+                        </h3><span class="Product-comments-amount"
+                                   th:text="${slugBook.getReviews().size()}">Кол-во отзывов</span>
                     </div>
                 </div>
-                <div class="Comments">
-                    <div class="Comment">
-                        <div class="Comment-column Comment-column_pict">
-                            <div class="Comment-avatar">
-                            </div>
-                        </div>
-                        <div class="Comment-column">
-                            <header class="Comment-header">
-                                <div>
-                                    <strong class="Comment-title">Александр Кузнецов<span class="Comment-rating"><span
-                                            class="Rating Rating_comment"><span class="Rating-stars"><span
-                                            class="Rating-star Rating-star_view">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                                <g>
-                                  <g>
-                                    <path fill="#ffc000"
-                                          d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                                  </g>
-                                </g>
-                              </svg></span><span class="Rating-star Rating-star_view">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                                <g>
-                                  <g>
-                                    <path fill="#ffc000"
-                                          d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                                  </g>
-                                </g>
-                              </svg></span><span class="Rating-star">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                                <g>
-                                  <g>
-                                    <path fill="#ffc000"
-                                          d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                                  </g>
-                                </g>
-                              </svg></span><span class="Rating-star">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                                <g>
-                                  <g>
-                                    <path fill="#ffc000"
-                                          d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                                  </g>
-                                </g>
-                              </svg></span><span class="Rating-star">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                                <g>
-                                  <g>
-                                    <path fill="#ffc000"
-                                          d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                                  </g>
-                                </g>
-                              </svg></span></span></span></span>
-                                    </strong><span class="Comment-date">17.04.2020 16:40</span>
-                                </div>
-                            </header>
-                            <div class="Comment-content">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit doli. Aenean commodo ligula
-                                    eget dolor. Aenean massa. Cumtipsu sociis natoque penatibus et magnis dis parturient
-                                    montesti, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
-                                    eutu, pretiumem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel,
-                                    aliquet nec, vulputate eget, arcu. In enim justotuio, rhoncus ut loret, imperdiet a,
-                                    venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer
-                                    tincidunt. Cras dapibus. Vivamus element semper nisi. Aenean vulputate eleifend
-                                    tellus. Aenean leo ligula, porttitor eu, consequat vitae.
-                                </p>
-                                <div class="Comment-footer">
-                                    <div class="Comment-appeal">
-                                        <button class="btn btn_white btn_like" data-btntype="check" data-check="false"
-                                                data-btnradio="two2" data-likeid="1111"><span class="btn-icon"><img
-                                                src="/assets/img/icons/comment/like.svg" alt="like.svg"/></span><span
-                                                class="btn-content">200</span>
-                                        </button>
-                                        <button class="btn btn_white btn_dislike" data-btntype="check"
-                                                data-check="false" data-btnradio="two2" data-likeid="1111"><span
-                                                class="btn-icon"><img src="/assets/img/icons/comment/dislike.svg"
-                                                                      alt="dislike.svg"/></span><span
-                                                class="btn-content">100</span>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <strong class="Comments-title">Написать отзыв
+                </strong>
+                <form name="review" method="post" action="#"
+                      th:action="${'/books/' + slugBook.slug + '/review/save'}">
+                    <p><b>Введите ваш отзыв:</b><Br>
+                        <textarea name="comment" cols="40" rows="3" id="commentarea"></textarea></p>
+                    <p>
+                        <input type="submit" value="Отправить" id="submitcomment">
+                        <input type="reset" value="Очистить"></p>
+                </form>
+                <div class="Comments" th:each="comment : ${slugBook.getReviews()}">
                     <div class="Comment">
                         <div class="Comment-column Comment-column_pict">
                             <div class="Comment-avatar">
@@ -633,44 +562,41 @@ p.error-browser
                                   </g>
                                 </g>
                               </svg></span></span></span></span>
-                                    </strong><span class="Comment-date">17.04.2020 16:40</span>
+                                    </strong><span class="Comment-date" th:text="${comment.formattedDateTime()}">17.04.2020 16:40</span>
                                 </div>
                             </header>
                             <div class="Comment-content">
                                 <div class="Spoiler">
-                                    <div class="Spoiler-visible">
-                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit doli. Aenean commodo
-                                            ligula eget dolor. Aenean massa. Cumtipsu sociis natoque penatibus et magnis
-                                            dis parturient montesti, nascetur ridiculus mus. Donec quam felis, ultricies
-                                            nec, pellentesque eutu, pretiumem. Nulla consequat massa quis enim. Donec
-                                            pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim
-                                            justotuio, rhoncus ut loret, imperdiet a, venenatis vitae, justo. Nullam
-                                            dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
-                                            Vivamus element semper nisi. Aenean vulputate eleifend tellus. Aenean leo
-                                            ligula, porttitor eu, consequat vitae.
+                                    <div class="Spoiler-visible" th:text="${comment.text}">
+                                        <p> Комментарий
                                         </p>
                                     </div>
-                                    <div class="Spoiler-hide">
-                                        <p>Первая книга - сборник повестей и рассказов "Большой поток" - посвящена людям
-                                            леспромхоза. Автор книг "Рассказы" (1954), "Неразменное счастье. Повести и
-                                            рассказы" (1962). Наиболее известная его повесть "Девчата" (1961) переведена
-                                            на пятнадцать языков. По написанному им же сценарию был поставлен
-                                            одноименный фильм, до сих пор имеющий огромный успех.
-                                        </p>
-                                    </div>
+                                    <!--                                    <div class="Spoiler-hide">
+                                                                            <p>Первая книга - сборник повестей и рассказов "Большой поток" - посвящена людям
+                                                                                леспромхоза. Автор книг "Рассказы" (1954), "Неразменное счастье. Повести и
+                                                                                рассказы" (1962). Наиболее известная его повесть "Девчата" (1961) переведена
+                                                                                на пятнадцать языков. По написанному им же сценарию был поставлен
+                                                                                одноименный фильм, до сих пор имеющий огромный успех.
+                                                                            </p>
+                                                                        </div>-->
                                     <div class="Comment-footer">
                                         <div class="Comment-appeal">
-                                            <button class="btn btn_white btn_like" data-btntype="check"
-                                                    data-check="false" data-btnradio="one1" data-likeid="333"><span
-                                                    class="btn-icon"><img src="/assets/img/icons/comment/like.svg"
-                                                                          alt="like.svg"/></span><span
-                                                    class="btn-content">500</span>
+                                            <button class="btn btn_white btn_like" data-btntype="check" id="likebutton"
+                                                    data-check="false" data-btnradio="one1" data-likeid="333"
+                                                    th:attr="data-bookslug = ${slugBook.slug}, data-likeid = ${comment.id}">
+                                                <span
+                                                        class="btn-icon"><img src="/assets/img/icons/comment/like.svg"
+                                                                              alt="like.svg"/></span><span
+                                                    class="btn-content" th:text="${comment.likeCount()}">0</span>
                                             </button>
                                             <button class="btn btn_white btn_dislike" data-btntype="check"
-                                                    data-check="false" data-btnradio="one1" data-likeid="333"><span
-                                                    class="btn-icon"><img src="/assets/img/icons/comment/dislike.svg"
-                                                                          alt="dislike.svg"/></span><span
-                                                    class="btn-content">50</span>
+                                                    data-check="false" data-btnradio="one1" data-likeid="333"
+                                                    th:attr="data-bookslug = ${slugBook.slug}, data-likeid = ${comment.id}">
+                                                <span
+                                                        class="btn-icon"><img
+                                                        src="/assets/img/icons/comment/dislike.svg"
+                                                        alt="dislike.svg"/></span><span
+                                                    class="btn-content" th:text="${comment.disLikeCount()}">0</span>
                                             </button>
                                         </div>
                                         <button class="Spoiler-trigger btn btn_primary btn_nr" type="button"
