--- a/src/main/resources/frontend/signin.html
+++ b/src/main/resources/frontend/signin.html
@@ -124,6 +124,9 @@
             </div>
             <div class="form-group form-group_center"><a class="Login-reg" href="/signup.html" th:href="@{/signup}">Зарегистрироваться</a>
             </div>
+            <div class="form-group form-group_center"><a class="Login-reg" href="/signup.html"
+                                                         th:href="@{/oauth2/authorization/facebook}">Войти c Facebook</a>
+            </div>
           </div>
         </form>
       </main>
